RE-504 ItemRegistry Test